# zerotoprod

./: .dockerignore  Cargo.toml  Dockerfile  configuration.yaml  spec.yaml
.github/workflows/: audit-on-push.yml  general.yml
configuration/: base.yaml  local.yaml  production.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
