[package]
name = "zerotoprod"
version = "0.1.0"
authors = ["Paul Roden <git@paulroden.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zerotoprod"


[dependencies]
# We are using the latest beta release of actix-web
# that relies on tokio 1.x.x
# There is _some_ turbulence when working with betas,
# we are pinning a few other supporting packages to ensure
# compatibility.
tokio = "1"
actix-web = "=4.0.0-beta.8"
actix-http = "=3.0.0-beta.8"

[dev-dependencies]
actix-rt = "=2"
