[package]
name = "zerotoprod"
version = "0.1.0"
authors = ["Paul Roden <git@paulroden.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zerotoprod"


[dependencies]
# We are using the latest beta release of actix-web
# that relies on tokio 1.x.x
# There is _some_ turbulence when working with betas,
# we are pinning a few other supporting packages to ensure
# compatibility.
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
serde = { version = "1", features = ["derive"] }
tokio = "1"
actix-web = "=4.0.0-beta.8"
actix-http = "=3.0.0-beta.8"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
config = { version = "0.10.1", default-features = false, features = ["yaml"] }

[dependencies.sqlx]
version = "0.5.5"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]


[dev-dependencies]
actix-rt = "=2"
